# hermes_langlib

./: .gitignore  CHANGELOG.md  README.md  example.toml  format-code.py  pyproject.toml
examples/: 1ex.py  2ex.py  format-code.py
examples/locales/: default.json  default2.json
hermes_langlib/: __init__.py  caching.py  formatter.py
hermes_langlib/locales/: __init__.py  manager.py
hermes_langlib/storage/: __init__.py  base.py  config_provider.py  loader.py  locale_store.py
hermes_langlib/translators/: providers.py
hermes_langlib/utils/: _patterns.py
locales/: default.json
tests/: CHANGELOG.md  example.toml  test_base.py  test_caching.py  test_locale.py  test_storage.py
tests/locales/: default.json
